# storepaths

./: CMakeLists.txt  DOC.md  README.md
include/libcfgpath/: cfgpath.h  common.h  implementations.hpp  sizedstream.hpp
include/storepaths/: common.h  implementations.hpp  sizedstream.hpp  storepaths.h
src/: cfgpath.cpp  cfgpath.impl.linux.cpp  cfgpath.impl.osx.c  cfgpath.impl.osx.cpp  cfgpath.impl.posix.cpp  cfgpath.impl.windows.cpp  common.cpp  storepaths.cpp  storepaths.impl.osx.cpp  storepaths.impl.posix.cpp  storepaths.impl.windows.cpp
